--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-08  Peter O'Gorman  <peter@pogma.com>
+
+	* libtool.m4 [darwin]: Clean up darwin bits. Looks more normal now.
+
 2004-07-07  Brad <brad@comstyle.com>
 
 	* libtool.m4: Fixes for the OpenBSD support
